--- a/index.html
+++ b/index.html
@@ -355,6 +355,9 @@
 
         <section id="nashixyuristov">
             <div class="container">
+                <h2>
+                    Специальности наших юристов
+                </h2>
                 <div class="yuristov">
                     <div class="ong">
                         <div class="ong_1">
@@ -458,7 +461,11 @@
         <section id="telefon_png">
             <div class="container">
                 <div class="png">
-                    <img src="./assets/images/Frame 43.png" alt="">
+                    <img src="./assets/images/Frame 43.png" alt="frame">
+                
+                </div>
+                <div class="png_mobile">
+                    <img src="./assets/icons/Mockup.svg" alt="">
                 </div>
             </div>
         </section>
